<resources>
    <string name="app_name">TifuApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_display_name">Display name</string>
    <string name="action_register">Register</string>
    <string name="edited_by_admin">Edited by @admin</string>
    <string name="prompt_title_post">Title</string>
    <string name="prompt_body_post">Your tifu</string>
    <string name="cancel_post">Cancel</string>
    <string name="submit_post">Submit</string>
    <string name="create_your_tifu">Create your tifu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_title">Sign in</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="or">OR</string>
    <string name="invalid_confirm">Passwords must be same</string>
    <string name="invalid_displayname">Must be 4-10 chars</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
